@@ -1,9 +1,10 @@
 Change log next version
 -----------------------
-* Added missing class, PowerMocompizckTestCase, to testng full release jar (issue 327).
+* Added missing class, PowerMockTestCase, to testng full release jar (issue 327).
 * Fixed test initialization error when using PowerMock Mockito API in Ant (issue 333).
 * Upgraded to Javassist 3.15 GA (issue 338).
 * Upgraded TestNG module to TestNG 6.1.1.
+* Mockito @InjectMocks annotations on superclasses of test class are no longer ignored (issue 343).
 
 Change log 1.4.9 (2011-05-02)
 -----------------------------
